<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceSmall"
        android:id="@id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_brnd" />

    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:layout_below="@id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item"
        android:layout_alignRight="@id/textView2"
        android:layout_alignBottom="@id/editText"
        android:layout_alignEnd="@id/textView2" />
    <Button
        android:id="@id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_alignBottom="@id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:onClick="onAddDeviceClick"
        android:layout_alignParentEnd="true" />
    <EditText android:id="@id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/button"
        android:layout_below="@id/editText2"
        android:layout_alignLeft="@id/editText2"
        android:inputType="text"
        android:layout_alignStart="@id/editText2" />
    <EditText
        android:id="@id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/button"
        android:layout_toRightOf="@id/textView"
        android:layout_alignTop="@id/textView2"
        android:inputType="text" />
    <Button
        android:id="@id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:onClick="onMainClick"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/button"
        android:layout_alignEnd="@id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView4"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@id/textView3"
        android:layout_alignStart="@id/textView3" />

</RelativeLayout>